--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-#cityName {
-    width: 70%;
-    background-color: goldenrod;
+#searchBtn {
+  width: 50px;
+  background-color: greenyellow;
+  cursor: pointer;
 }
 
-#searchBtn {
-    width: 50px;
-    background-color: greenyellow;
-    cursor: pointer;
+#mainContainer {
+  height: 200px;
+  width: 200px;
+  background-color: blueviolet;
 }
